package.json: start:prod script

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Deis Dash is a web based UI for the Deis PaaS",
   "scripts": {
     "start": "node server.js",
+    "start:prod": "NODE_ENV=production node server.js",
     "start:electron": "electron ./electron/main.js",
     "build": "NODE_ENV=production webpack -p --config webpack.build.config.js",
     "build:electron": "ELECTRON=1 NODE_ENV=production webpack -p --config webpack.electron.config.js",
